--- a/ConsoleAppPruebaGit/ConsoleAppPruebaGit.csproj
+++ b/ConsoleAppPruebaGit/ConsoleAppPruebaGit.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Cuentas.cs" />
+    <Compile Include="Models\Persona.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
